Update 'go-rkhzssrg' component image to: quay.io/rhtap_qe/go-rkhzssrg:ac9cd10abec3b0bf7566a2676d0e9bb210cc857b@sha256:50524c4d4baf6e8c0f3ee4c7b5904ccd9abe3654aee1ad90f03306cd959f5730

--- a/components/go-rkhzssrg/overlays/development/deployment-patch.yaml
+++ b/components/go-rkhzssrg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rkhzssrg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rkhzssrg:ac9cd10abec3b0bf7566a2676d0e9bb210cc857b@sha256:50524c4d4baf6e8c0f3ee4c7b5904ccd9abe3654aee1ad90f03306cd959f5730
+          name: container-image
